mitosheet: stop the graph toolbar tabs from overflowing, toggle graph with fullscreen, update language on clear analysis

--- a/mitosheet/css/taskpanes/Graph/GraphSidebar.css
+++ b/mitosheet/css/taskpanes/Graph/GraphSidebar.css
@@ -50,6 +50,7 @@
 
     border-left: 1px solid var(--mito-border);
     width: 250px;
+    min-width: 250px;
     height: 100%;
     box-sizing: border-box;
 }
@@ -63,12 +64,13 @@
         Must be the same height as the height of the tabs defined .control-panel-taskpane-tab
     */
     height: calc(100% - 30px);
-    width: 100%;
+    width: 250px;
     
     padding-top: 5px;
     padding-right: 10px; /* Extra padding on the right to make space for the scrollbar */
     padding-left: 5px;
     box-sizing: border-box;
+
 }
 
 .graph-sidebar-toolbar-content {
